    (cmb)

- LDAP:
  . Deprecated ldap_control_paged_result_response and ldap_control_paged_result

- Opcache:
  . Implemented preloading RFC: https://wiki.php.net/rfc/preload. (Dmitry)

- OpenSSL:
  . Added openssl_x509_verify function. (Ben Scholzen)
  . openssl_random_pseudo_bytes() now throws in error conditions.
    (Sammy Kaye Powers)

- PCRE:
  . Fixed bug #72685 (Repeated UTF-8 validation of same string in UTF-8 mode).
    (Nikita)
  . Implemented FR #77094 (Support flags in preg_replace_callback). (Nikita)

- PDO_OCI:
  . Support Oracle Database tracing attributes ACTION, MODULE,
    CLIENT_INFO, and CLIENT_IDENTIFIER. (Cameron Porter)
  . Implemented FR #76908 (PDO_OCI getColumnMeta() not implemented).
    (Valentin Collet, Chris Jones, Remi)

- PDO_SQLite:
  . Implemented sqlite_stmt_readonly in PDO_SQLite. (BohwaZ)
  . Raised requirements to SQLite 3.5.0. (cmb)

- phpdbg:
  . Fixed bug #76596 (phpdbg support for display_errors=stderr). (kabel)

- Sockets:
  . Fixed bug #67619 (Validate length on socket_write). (thiagooak)

- sodium:
  . Fixed bug #77646 (sign_detached() strings not terminated). (Frank)

- SQLite3:
  . Unbundled libsqlite. (cmb)
  . Raised requirements to SQLite 3.7.4. (cmb)
  . Forbid (un)serialization of SQLite3, SQLite3Stmt and SQLite3Result. (cmb)
  . Added support for the SQLite @name notation. (cmb, BohwaZ)
  . Added SQLite3Stmt::getSQL() to retrieve the SQL of the statement. (Bohwaz)

- SPL:
  . Fixed bug #77518 (SeekableIterator::seek() should accept 'int' typehint as
    documented). (Nikita)

- Standard:
  . Fixed bug #74764 (Bindto IPv6 works with file_get_contents but fails with
    stream_socket_client). (Ville Hukkamäki)
  . Implemented FR #38301 (field enclosure behavior in fputcsv). (cmb)
  . Implemented FR #51496 (fgetcsv should take empty string as an escape). (cmb)
  . Implemented FR #77377 (No way to handle CTRL+C in Windows). (Anatol)

- Reflection: