@@ -145,6 +145,8 @@ array (
   0 => 
   array (
     0 => '1',
+    1 => NULL,
+    2 => NULL,
   ),
   1 => 
   array (
@@ -156,10 +158,13 @@ array (
   array (
     0 => '45',
     1 => '4',
+    2 => NULL,
   ),
   3 => 
   array (
     0 => '6',
+    1 => NULL,
+    2 => NULL,
   ),
 )
 
@@ -170,6 +175,16 @@ array (
     array (
       0 => '1',
       1 => 0,
+    ),
+    1 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
     ),
   ),
   1 => 
@@ -202,6 +217,11 @@ array (
       0 => '4',
       1 => 3,
     ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
   ),
   3 => 
   array (
@@ -209,6 +229,16 @@ array (
     array (
       0 => '6',
       1 => 5,
+    ),
+    1 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
     ),
   ),
 )
