@@ -217,6 +217,10 @@ array (
   0 => 
   array (
     0 => '1',
+    'a' => NULL,
+    1 => NULL,
+    'b' => NULL,
+    2 => NULL,
   ),
   1 => 
   array (
@@ -231,10 +235,16 @@ array (
     0 => '45',
     'a' => '4',
     1 => '4',
+    'b' => NULL,
+    2 => NULL,
   ),
   3 => 
   array (
     0 => '6',
+    'a' => NULL,
+    1 => NULL,
+    'b' => NULL,
+    2 => NULL,
   ),
 )
 
@@ -245,6 +255,26 @@ array (
     array (
       0 => '1',
       1 => 0,
+    ),
+    'a' => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    1 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    'b' => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
     ),
   ),
   1 => 
@@ -292,6 +322,16 @@ array (
       0 => '4',
       1 => 3,
     ),
+    'b' => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
   ),
   3 => 
   array (
@@ -299,6 +339,26 @@ array (
     array (
       0 => '6',
       1 => 5,
+    ),
+    'a' => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    1 => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    'b' => 
+    array (
+      0 => NULL,
+      1 => -1,
+    ),
+    2 => 
+    array (
+      0 => NULL,
+      1 => -1,
     ),
   ),
 )
